# fastapi-tutorial

./: .flake8  .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
app/: migrations.py  routers.py
app/auth/: domains.py
app/location/: domain.py  repository.py  router.py  schema.py
config/: __init__.py  database.py  dependency.py  event.py  middleware.py  settings.py
data/: egypt_location_data.sql
location/: entity.py
migrations/: env.py
migrations/versions/: 034969b74154_create_tables_for_location_domain.py  16dc813b54bb_fill_egypt_location_data.py  1dad8acbd02f_update_delete_method_on_location_tables.py  65c3a448903d_add_table_user.py  7b02a820b2d9_initiate_user_model.py
src/: database.py  main.py  settings.py
src/models/: auth.py
src/routers/: auth.py
utilities/db/: __init__.py  dependency.py  entity.py  repository.py  setup.py
