[tool.poetry]
name = "wasla"
version = "0.1.0"
description = ""
authors = ["Mahmud Youssef <mahmud.youssef@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.1"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
sqlmodel = "^0.0.6"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.6"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
combine_as_imports = true
lines_after_imports = 2
atomic = true
