[tool.poetry]
name = "Test App"
version = "0.1.0"
description = ""
authors = ["Mahmud Youssef <mahmud.youssef@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.272"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119


[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
combine_as_imports = true
lines_after_imports = 2
atomic = true
force_single_line = true
py_version = 39


[tool.ruff]
extend-select = ["B", "Q", "N", "W", "DJ", "PLE", "PIE", "ERA", "ARG", "INT", "TCH", "SIM"]
exclude = [
    ".pytype",
    ".ruff_cache",
    ".git",
    ".pytest_cache",
    "__pycache__",
]
line-length = 119
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"


[tool.ruff.per-file-ignores]
"*/__init__.py" = ["F401"]