[tool.poetry]
name = "FastAPI Tutorial"
version = "0.1.0"
description = ""
authors = ["Mahmud Youssef <mahmud.youssef@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = { extras = ["stander"], version = "^0.23.2" }
pydantic-settings = "^2.0.3"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.22" }
asyncpg = "^0.28.0"
alembic = "^1.12.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
